# trabalho-final-trabalhofinal-compiladores

./: README.md  pyproject.toml  pytest.ini
examples/: factorial.sl  fibonacci.sl  for_loop.sl  if_else.sl  while_loop.sl
lox/: __init__.py  __main__.py  ast.py  cli.py  ctx.py  errors.py  grammar.lark  node.py  parser.py  runtime.py  testing.py  transformer.py
tests/: test_integration.py
