[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplelang"
version = "1.0.0"
description = "Um interpretador para a linguagem SimpleLang"
authors = [
    {name = "Arthur Henrique Vieira", email = "arthur@example.com"},
    {name = "Gabriel Soares dos Anjos", email = "gabriel@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lark>=1.1.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
simplelang = "lox.cli:main"

[project.urls]
Homepage = "https://github.com/example/simplelang"
Repository = "https://github.com/example/simplelang"

[tool.setuptools.packages.find]
where = ["."]
include = ["lox*"]

[tool.pytest.ini_options]
testpaths = ["tests", "lox/testing.py"]
python_files = ["test_*.py", "*_test.py", "testing.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

